# equinox-2

./: .gitignore  LICENSE  README.md
.github/ISSUE_TEMPLATE/: project-overview-template.md
.github/workflows/: astro.yml
eq2-docs/: astro.config.mjs  package-lock.json  package.json
eq2-docs/src/content/docs/: index.mdx
eq2-docs/src/content/docs/design/excavator/: hardware-interface.mdx
eq2-docs/src/content/docs/design/science/: science-hardware-interface.mdx
eq2-docs/src/content/docs/guides/: buzzword-basics.mdx  canbus-basics.mdx  git-basics.mdx  git-commands.mdx  linux-commands.mdx  pack-and-unpack.mdx  ros2.mdx  ros2_ws.mdx
eq2-docs/src/content/docs/standards/: canbus.mdx  git.mdx
eq2-docs/src/content/docs/start-here/: getting-started.mdx
eq2-docs/src/content/docs/workshops/: canbus-basics.mdx  git-basics.mdx  pack-and-unpack.mdx  ros2.mdx
eq2-docs/src/styles/: custom.css
eq2-setup/: ros2_setup.sh
libuniversalcan/: CommandUtils.cpp  EQUCAN.cpp  RoverCanMaster.cpp  RoverMiniSlave.h  setup.py
linux/: TestBroadRecv
onboard/eq2-cameras/: CMakeLists.txt  Cargo.toml  README.md  flake.nix
onboard/eq2-cameras/doc/: Doxyfile
onboard/eq2-cameras/include/: camera_manager.hpp  camera_types.hpp  device_discovery.hpp  device_manager.hpp  device_registry.hpp  stream_registry.hpp
onboard/eq2-cameras/src/: camera_manager.cpp  camera_types.rs  device_discovery.cpp  device_discovery.rs  device_manager.cpp  device_registry.cpp  device_registry.rs  main.cpp  main.rs  stream_registry.cpp  stream_registry.rs
onboard/hardware-interfaces/excavator/: CMakeLists.txt  ExcavatorActuator.cpp  ExcavatorActuator.h  ExcavatorPayload.cpp  ExcavatorPayload.h
onboard/hardware-interfaces/excavator/src/: ExcavatorActuator.cpp  ExcavatorActuator.h  ExcavatorPayload.cpp  ExcavatorPayload.h  PaverMagnet.cpp  PaverMagnet.h  TeethActuator.cpp  TeethActuator.h
onboard/hardware-interfaces/gimbal/: GimbalServo.cpp  GimbalServo.h
onboard/hardware-interfaces/lib-universal-canbus/: README.md  buildPycontrol.sh
onboard/hardware-interfaces/lib-universal-canbus/hardware/pico/arduinoExampleNoBlock/: CommandUtils.cpp  RoverCanSlave.cpp
onboard/hardware-interfaces/lib-universal-canbus/hardware/uno/arduinoExample/: RATCAN.h  arduinoExample.ino
onboard/hardware-interfaces/lib-universal-canbus/hardware/uno/arduinoExampleNoBlock/: CommandUtils.h  GenericCan.h  RATCAN.cpp  RoverCanSlave.h  arduinoExampleNoBlock.ino
onboard/hardware-interfaces/lib-universal-canbus/libuniversalcan/: CommandUtils.h  EQUCAN.h  GenericCan.h  RoverCanMaster.cpp  RoverCanMaster.h  RoverCanSlave.cpp  RoverMiniSlave.cpp  SocketCanWrapper.cpp  SocketCanWrapper.h  pyRover.cpp
onboard/hardware-interfaces/lib-universal-canbus/linux/: Makefile  SetupVCAN.sh  TestBroadcastReceive.cpp  TestLinuxMaster  TestLinuxMaster.cpp  TestLinuxSlave  TestLinuxSlave.cpp  UniCanMon.cpp
onboard/hardware-interfaces/science/: SciencePayload.cpp  SciencePayload.h
onboard/hardware-interfaces/science/src/: CMakeLists.txt  Drill.cpp  Drill.h  GenericMotor.cpp  GenericMotor.h  Heater.cpp  Heater.h  Microscope.cpp  Microscope.h  SciencePayload.cpp  SciencePayload.h  StepperMotor.cpp  StepperMotor.h
