[package]
name = "eq2-cameras"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
env_logger = "0.11.10"
glib = "0.22.3"
gstreamer = "0.25.1"
gstreamer-video = "0.25.0"
gstreamer-webrtc = "0.25.0"
log = "0.4.29"
parking_lot = "0.12.5"
thiserror = "2.0.18"
tracing = { version = "0.1", features = ["attributes"] }